--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -10,7 +10,7 @@
   .sidebar-container {
     transition: width 0.28s;
     width: $sideBarWidth !important;
-    background-color: $menuBg;
+    background-color: white;
     height: 100%;
     position: fixed;
     font-size: 0px;
