--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -23,9 +23,9 @@
     box-shadow: 0px 0px 9px 0px rgba(198, 206, 215, 0.47);
 
     // reset element-ui css
-    .horizontal-collapse-transition {
-      transition: 0s width ease-in-out, 0s padding-left ease-in-out, 0s padding-right ease-in-out;
-    }
+    // .horizontal-collapse-transition {
+    //   transition: 0s width ease-in-out, 0s padding-left ease-in-out, 0s padding-right ease-in-out;
+    // }
 
     .scrollbar-wrapper {
       overflow-x: hidden !important;
@@ -37,12 +37,6 @@
 
     .el-scrollbar {
       flex: 1;
-    }
-
-    &.has-logo {
-      .el-scrollbar {
-        height: calc(100% - 50px);
-      }
     }
 
     .is-horizontal {
@@ -64,44 +58,50 @@
       margin-left: -2px;
     }
 
-    .el-menu {
-      border: none;
-      height: 100%;
-      width: 100% !important;
-      padding: 0 10px;
-    }
-
-    // menu hover
-    .submenu-title-noDropdown,
-    .el-submenu__title {
+    .el-menu-item {
       &:hover {
-        background-color: white !important;
-      }
-      &.is-active {
-        background-color: #367AFD !important;
-        color: white;
+        color: #367AFD;
       }
     }
 
-    // .is-active>.el-submenu__title {
-    //   color: $subMenuActiveText !important;
+    // .el-menu {
+    //   border: none;
+    //   height: 100%;
+    //   width: 100% !important;
+    //   padding: 0 10px;
     // }
 
-    & .nest-menu .el-submenu>.el-submenu__title,
-    & .el-submenu .el-menu-item {
-      min-width: $sideBarWidth  !important;
-      background-color: white !important;
-      border-radius: 5px;
-      &.is-active {
-        background-color: #367AFD !important;
-        color: white;
-      }
+    // menu hover
+    // .submenu-title-noDropdown,
+    // .el-submenu__title {
+    //   &:hover {
+    //     background-color: white !important;
+    //   }
+    //   &.is-active {
+    //     background-color: #367AFD !important;
+    //     color: white;
+    //   }
+    // }
 
-      &:hover {
-        background-color: #367AFD !important;
-        color: white;
-      }
-    }
+    // & .nest-menu .el-submenu>.el-submenu__title,
+    // & .el-submenu .el-menu-item {
+    //   min-width: $sideBarWidth  !important;
+    //   background-color: white !important;
+    //   border-radius: 5px;
+    //   &.is-active {
+    //     background-color: #367AFD !important;
+    //     color: white;
+    //     &:hover {
+    //       color: white;
+    //     }
+    //   }
+
+    //   &:hover {
+    //     // background-color: #367AFD !important;
+    //     // color: white;
+    //     color: #367AFD;
+    //   }
+    // }
   }
 
 
@@ -119,53 +119,53 @@
 }
 
 // when menu collapsed
-.el-menu--vertical {
-  &>.el-menu {
-    .svg-icon {
-      margin-right: 16px;
-    }
+// .el-menu--vertical {
+//   &>.el-menu {
+//     .svg-icon {
+//       margin-right: 16px;
+//     }
 
-    .sub-el-icon {
-      margin-right: 12px;
-      margin-left: -2px;
-    }
-  }
+//     .sub-el-icon {
+//       margin-right: 12px;
+//       margin-left: -2px;
+//     }
+//   }
 
-  .nest-menu .el-submenu>.el-submenu__title,
-  .el-menu-item {
-    &:hover {
-      // you can use $subMenuHover
-      background-color: #367AFD !important;
-    }
-  }
+//   .nest-menu .el-submenu>.el-submenu__title,
+//   .el-menu-item {
+//     &:hover {
+//       // you can use $subMenuHover
+//       background-color: #367AFD !important;
+//     }
+//   }
 
-  // the scroll bar appears when the subMenu is too long
-  >.el-menu--popup {
-    max-height: 100vh;
-    overflow-y: auto;
+//   // the scroll bar appears when the subMenu is too long
+//   >.el-menu--popup {
+//     max-height: 100vh;
+//     overflow-y: auto;
 
-    &::-webkit-scrollbar-track-piece {
-      background: #d3dce6;
-    }
+//     &::-webkit-scrollbar-track-piece {
+//       background: #d3dce6;
+//     }
 
-    &::-webkit-scrollbar {
-      width: 6px;
-    }
+//     &::-webkit-scrollbar {
+//       width: 6px;
+//     }
 
-    &::-webkit-scrollbar-thumb {
-      background: #99a9bf;
-      border-radius: 20px;
-    }
-  }
-}
+//     &::-webkit-scrollbar-thumb {
+//       background: #99a9bf;
+//       border-radius: 20px;
+//     }
+//   }
+// }
 
-.el-submenu__title {
-  font-size: 16px;
-  font-family: PingFang SC;
-  font-weight: bold;
-  color: #282727;
-}
-.el-menu-item {
-  font-size: 18px;
-  font-family: PingFang SC;
-}
+// .el-submenu__title {
+//   font-size: 16px;
+//   font-family: PingFang SC;
+//   font-weight: bold;
+//   color: #282727;
+// }
+// .el-menu-item {
+//   font-size: 18px;
+//   font-family: PingFang SC;
+// }
