--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -23,7 +23,7 @@
     margin-top: -16px;
   }
 
-  .el-form-item--small.el-form-item,
+  .el-form-item--medium.el-form-item,
   .el-form-item {
     margin-bottom: 0;
     margin-top: 16px;
@@ -40,15 +40,6 @@
   text-align: right;
 }
 
-// .el-link::before {
-//   content: "";
-//   position: absolute;
-//   left: 0;
-//   right: 0;
-//   height: 0;
-//   bottom: 0;
-//   border-bottom: 1px solid #1890ff;
-// }
 .el-link {
   text-decoration: underline;
   &:hover {
