--- a/src/views/clear/clear_list.scss
+++ b/src/views/clear/clear_list.scss
@@ -1,9 +1,13 @@
-.content {
-  padding: 0 0.25rem;
-  height: calc(100vh - 105px - 1.15rem);
-  background: #fff;
-  .content_1 {
-    text-align: end;
-    margin-top: 0.625rem;
-  }
+// .content {
+//   padding: 0 0.25rem;
+//   height: calc(100vh - 105px - 1.15rem);
+//   background: #fff;
+//   .content_1 {
+//     text-align: end;
+//     margin-top: 0.625rem;
+//   }
+// }
+
+::v-deep .header {
+  padding: 0;
 }
