--- a/src/views/dashboard/index.scss
+++ b/src/views/dashboard/index.scss
@@ -117,3 +117,58 @@
     }
   }
 }
+.mask {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba($color: #000000, $alpha: 0.5);
+  top: 0;
+  left: 0;
+  z-index: 10086;
+  .mask_1 {
+    width: 8.6375rem;
+    height: 5.65rem;
+    background: #ffffff;
+    box-shadow: 0px 0px 0.4375rem 0px rgba(136, 143, 151, 0.45);
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    .mask_1_1 {
+      width: 8.6375rem;
+      height: 0.55rem;
+      background: #367afd;
+      line-height: 0.55rem;
+      padding-left: 0.2625rem;
+      font-size: 0.2rem;
+      font-family: PingFang SC;
+      font-weight: 500;
+      color: #ffffff;
+    }
+    .mask_1_2 {
+      font-size: 16px;
+      font-family: PingFang SC;
+      color: #000000;
+      padding-top: 0.375rem;
+      padding-left: 0.2625rem;
+      padding-right: 0.4625rem;
+      line-height: 0.3875rem;
+      .mask_1_2_1 {
+        font-weight: bold;
+      }
+    }
+    .mask_1_3 {
+      position: absolute;
+      bottom: 0.3875rem;
+      right: 0.45rem;
+      font-size: 0.2rem;
+      font-family: PingFang SC;
+      font-weight: 500;
+      text-decoration: underline;
+      color: #367afd;
+      cursor: pointer;
+    }
+  }
+}
