--- a/src/views/dashboard/index.scss
+++ b/src/views/dashboard/index.scss
@@ -121,7 +121,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  background: rgba($color: #000000, $alpha: 0.5);
+  // background: rgba($color: #000000, $alpha: 0.5);
   top: 0;
   left: 0;
   z-index: 10086;
