--- a/src/views/dashboard/index.scss
+++ b/src/views/dashboard/index.scss
@@ -1,12 +1,10 @@
 .content {
-  padding-top: 11px;
   .content_1 {
-    width: 19.875rem;
-    height: 2.1rem;
+    height: 168px;
     background: #ffffff;
-    margin: 0 auto;
     display: flex;
     justify-content: space-between;
+
     .content_1_1 {
       flex: 1;
       display: flex;
@@ -14,6 +12,7 @@
       align-items: center;
       justify-content: center;
       position: relative;
+
       .content_1_1_1 {
         font-size: 0.475rem;
         font-family: PingFang SC;
@@ -22,6 +21,7 @@
         line-height: 1;
         margin-bottom: 0.275rem;
       }
+
       .content_1_1_2 {
         font-size: 0.2rem;
         font-family: PingFang SC;
@@ -29,6 +29,7 @@
         color: #282828;
         line-height: 1;
       }
+
       .content_1_1_3 {
         position: absolute;
         top: 0;
@@ -40,18 +41,19 @@
         background: #eff2f5;
       }
     }
+
     .content_1_1:last-child {
       .content_1_1_3 {
         display: none;
       }
     }
   }
+
   .content_2 {
-    margin: 0 auto;
-    margin-top: 0.2rem;
-    width: 19.8625rem;
-    height: 6.7375rem;
+    margin-top: 10px;
+    height: 530px;
     background: #ffffff;
+
     .content_2_1 {
       display: flex;
       align-items: center;
@@ -59,6 +61,7 @@
       justify-content: space-between;
       padding: 0 0.2125rem;
       position: relative;
+
       .content_2_1_1 {
         font-size: 0.2rem;
         font-family: PingFang SC;
@@ -66,6 +69,7 @@
         color: #282828;
         line-height: 1;
       }
+
       .content_2_1_3 {
         width: 6.05rem;
         height: 0.0125rem;
@@ -76,23 +80,27 @@
       }
     }
   }
+
   .content_3 {
-    width: 19.8625rem;
-    margin: 0 auto;
-    margin-top: 0.2rem;
+    margin-top: 10px;
     display: flex;
     justify-content: space-between;
+
     .content_3_1 {
-      width: 9.875rem;
-      height: 3.7375rem;
-      background: #ffffff;
+      width: 50%;
+
+      &:first-of-type {
+        margin-right: 11px;
+      }
+
       .content_3_1_1 {
-        height: 0.8125rem;
+        height: 65px;
         background: #f8fbff;
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 0 0.2375rem;
+
         .content_3_1_1_1 {
           font-size: 0.2rem;
           font-family: PingFang SC;
@@ -100,6 +108,7 @@
           color: #282828;
           line-height: 1;
         }
+
         .content_3_1_1_3 {
           font-size: 0.1875rem;
           font-family: PingFang SC;
@@ -109,14 +118,14 @@
           cursor: pointer;
         }
       }
+
       .content_3_1_2 {
-        width: 9.45rem;
-        margin: 0 auto;
-        margin-top: 0.2875rem;
+        padding: 6px 16px;
       }
     }
   }
 }
+
 .mask {
   position: fixed;
   width: 100%;
@@ -125,6 +134,7 @@
   top: 0;
   left: 0;
   z-index: 10086;
+
   .mask_1 {
     width: 8.6375rem;
     height: 5.65rem;
@@ -136,6 +146,7 @@
     top: 0;
     bottom: 0;
     margin: auto;
+
     .mask_1_1 {
       width: 8.6375rem;
       height: 0.55rem;
@@ -147,6 +158,7 @@
       font-weight: 500;
       color: #ffffff;
     }
+
     .mask_1_2 {
       font-size: 16px;
       font-family: PingFang SC;
@@ -155,10 +167,12 @@
       padding-left: 0.2625rem;
       padding-right: 0.4625rem;
       line-height: 0.3875rem;
+
       .mask_1_2_1 {
         font-weight: bold;
       }
     }
+
     .mask_1_3 {
       position: absolute;
       bottom: 0.3875rem;
@@ -171,4 +185,13 @@
       cursor: pointer;
     }
   }
+}
+
+.app-page {
+  background: initial;
+  padding: 0;
+}
+.space {
+  padding: 10px 0;
+  background: #ffffff;
 }
