--- a/src/views/message_content/index.scss
+++ b/src/views/message_content/index.scss
@@ -32,47 +32,74 @@
   .content_2 {
     .content_2_1 {
       cursor: pointer;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
       padding-top: 0.225rem;
-      padding-bottom: 0.225rem;
       padding-left: 0.075rem;
       border-bottom: 0.0125rem solid #eff2f5;
+      position: relative;
+      -moz-user-select: none; /*火狐*/
+      -webkit-user-select: none; /*webkit浏览器*/
+      -ms-user-select: none; /*IE10*/
+      -khtml-user-select: none; /*早期浏览器*/
+      user-select: none;
+      padding-bottom: 0.2rem;
+      transition: all 0.5s;
       .content_2_1_1 {
         display: flex;
+        justify-content: space-between;
         align-items: center;
         .content_2_1_1_1 {
-          width: 0.0875rem;
-          height: 0.0875rem;
-          background: #fd3636;
-          border-radius: 50%;
-          margin-right: 0.25rem;
+          display: flex;
+          align-items: center;
+          .content_2_1_1_1_1 {
+            width: 0.0875rem;
+            height: 0.0875rem;
+            background: #fd3636;
+            border-radius: 50%;
+            margin-right: 0.25rem;
+          }
+          .content_2_1_1_1_2 {
+            font-size: 0.1875rem;
+            font-family: PingFang SC;
+            font-weight: 500;
+            color: #565656;
+            line-height: 1;
+          }
         }
         .content_2_1_1_2 {
-          font-size: 0.1875rem;
-          font-family: PingFang SC;
-          font-weight: 500;
-          color: #565656;
-          line-height: 1;
+          display: flex;
+          align-items: center;
+          .content_2_1_1_2_1 {
+            font-size: 0.1875rem;
+            font-family: PingFang SC;
+            font-weight: 500;
+            color: #565656;
+            line-height: 1;
+            margin-right: 0.5625rem;
+          }
+          .content_2_1_1_2_2 {
+            width: 0.125rem;
+            height: 0.0625rem;
+            transition: all 0.5s;
+          }
         }
       }
       .content_2_1_2 {
-        display: flex;
-        align-items: center;
-        .content_2_1_2_1 {
-          font-size: 0.1875rem;
-          font-family: PingFang SC;
-          font-weight: 500;
-          color: #565656;
-          line-height: 1;
-          margin-right: 0.5625rem;
-        }
-        .content_2_1_2_2 {
-          width: 0.125rem;
-          height: 0.0625rem;
-        }
+        font-size: 0.1875rem;
+        font-family: PingFang SC;
+        font-weight: 400;
+        color: #6f6f6f;
+        line-height: 0.3875rem;
+        padding-left: 0.4rem;
+        margin-top: 0.375rem;
+        overflow: hidden;
+        transition: all 0.5s;
+        height: auto;
+        padding-bottom: 0.125rem;
       }
     }
+  }
+  .content_3 {
+    margin-top: 0.45rem;
+    text-align: end;
   }
 }
