--- a/src/views/login/index.scss
+++ b/src/views/login/index.scss
@@ -59,4 +59,11 @@
       cursor: pointer;
     }
   }
+  .content_2 {
+    position: absolute;
+    left: 4.275rem;
+    top: 1.875rem;
+    width: 5.425rem;
+    height: 1.2375rem;
+  }
 }
