--- a/src/views/message_content/index.scss
+++ b/src/views/message_content/index.scss
@@ -5,6 +5,7 @@
   margin: 0 auto;
   margin-top: 0.1625rem;
   padding: 0 0.4375rem;
+  overflow: auto;
   .content_1 {
     display: flex;
     justify-content: space-between;
