--- a/src/views/dashboard/index.scss
+++ b/src/views/dashboard/index.scss
@@ -120,7 +120,8 @@
       }
 
       .content_3_1_2 {
-        padding: 6px 16px;
+        padding: 20px 15px;
+        background-color: white;
       }
     }
   }
@@ -190,8 +191,4 @@
 .app-page {
   background: initial;
   padding: 0;
-}
-.space {
-  padding: 10px 0;
-  background: #ffffff;
 }
