--- a/src/views/dashboard/index.scss
+++ b/src/views/dashboard/index.scss
@@ -128,7 +128,7 @@
 }
 
 .mask {
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100%;
   // background: rgba($color: #000000, $alpha: 0.5);
