--- a/src/views/dashboard/index.scss
+++ b/src/views/dashboard/index.scss
@@ -122,6 +122,7 @@
       .content_3_1_2 {
         padding: 20px 15px;
         background-color: white;
+        height: 232px;
       }
     }
   }
