用户列表加查询条件

--- a/src/views/user_management/user_list.scss
+++ b/src/views/user_management/user_list.scss
@@ -5,6 +5,7 @@
   }
   .content_2 {
     margin-bottom: 0.2rem;
-    text-align: end;
+    display: flex;
+    justify-content: space-between;
   }
 }
