--- a/src/views/user_management/user_list.scss
+++ b/src/views/user_management/user_list.scss
@@ -3,9 +3,15 @@
     text-align: end;
     margin-top: 0.2rem;
   }
+
   .content_2 {
     margin-bottom: 0.2rem;
     display: flex;
     justify-content: space-between;
   }
+
+}
+
+::v-deep .disabled {
+  color: #c3c3c3;
 }
